[gd_scene load_steps=22 format=3 uid="uid://csbqq51s1bf14"]

[ext_resource type="Script" uid="uid://burr4kixdupuq" path="res://Scripts/UI/fullscreen_toggle.gd" id="1_4r2l2"]
[ext_resource type="Script" uid="uid://b13iffimqj3yk" path="res://Scripts/options_menu.gd" id="1_uk1om"]
[ext_resource type="Texture2D" uid="uid://b8w151n0j563v" path="res://Sprites/UI/botões/botão g.png" id="2_abnwp"]
[ext_resource type="Script" uid="uid://c33v11q4gjqps" path="res://Scripts/UI/volume_slider.gd" id="2_jujgt"]
[ext_resource type="Theme" uid="uid://7eltmng1er5f" path="res://UITheme/ButtonTheme.tres" id="2_vqdip"]
[ext_resource type="Texture2D" uid="uid://cp8g8hdrlhv80" path="res://Sprites/UI/botões/ícones/volume música.png" id="3_4r2l2"]
[ext_resource type="Texture2D" uid="uid://8ny4lelofd" path="res://Sprites/UI/botões/botão g (click).png" id="3_jujgt"]
[ext_resource type="Texture2D" uid="uid://c8ter8mgts3qo" path="res://Sprites/UI/botões/ícones/resolução.png" id="3_ls0ev"]
[ext_resource type="Texture2D" uid="uid://tqic7m8q2dab" path="res://Sprites/UI/botões/ícones/configuração.png" id="4_uk1om"]
[ext_resource type="Texture2D" uid="uid://b71jk8ppmact0" path="res://Sprites/UI/botões/botão g (selecionado).png" id="4_xvass"]
[ext_resource type="Texture2D" uid="uid://c5pvargarmrif" path="res://Sprites/UI/botões/ícones/volume efeitos sonoros.png" id="5_ls0ev"]
[ext_resource type="AudioStream" uid="uid://tal14v0jmg7t" path="res://Audio/Echoes in the Fog.mp3" id="12_wbxsw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mtov2"]
bg_color = Color(0.0823529, 0.0313726, 0.0705882, 0.996078)

[sub_resource type="LabelSettings" id="LabelSettings_ticnd"]
font_size = 56

[sub_resource type="LabelSettings" id="LabelSettings_uk1om"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_abnwp"]
font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jujgt"]
draw_center = false
border_width_top = 2
border_width_bottom = 2
border_color = Color(0.305649, 0.117356, 0.221923, 1)
shadow_color = Color(0.870494, 0.000114647, 0.71221, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xvass"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
border_width_top = 2
border_width_bottom = 2
border_color = Color(0.250675, 0.498702, 0.236734, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nemqh"]
draw_center = false
border_width_top = 2
border_width_bottom = 2
border_color = Color(0.155504, 0.653868, 0.492289, 1)

[sub_resource type="SystemFont" id="SystemFont_ls0ev"]
font_names = PackedStringArray("Monospace")

[sub_resource type="LabelSettings" id="LabelSettings_vqdip"]
font = SubResource("SystemFont_ls0ev")

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uk1om")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mtov2")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_top = 58.0
offset_right = 182.0
offset_bottom = 157.0
grow_horizontal = 2
text = "OPÇÕES"
label_settings = SubResource("LabelSettings_ticnd")
horizontal_alignment = 1

[node name="FullScreen" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -104.0
offset_right = -83.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
text = "Fullscreen"
label_settings = SubResource("LabelSettings_uk1om")

[node name="FullscreenToggle" type="CheckButton" parent="FullScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 220.0
offset_top = -17.0
offset_right = 319.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_vqdip")
text = "off"
alignment = 1
script = ExtResource("1_4r2l2")

[node name="TextureRect" type="TextureRect" parent="FullScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = -20.0
offset_right = -81.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ls0ev")

[node name="VolumeMaster" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -36.0
offset_right = -76.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
text = "Master:"
label_settings = SubResource("LabelSettings_abnwp")

[node name="Slider" type="HSlider" parent="VolumeMaster"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 167.5
offset_top = -6.0
offset_right = 377.5
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_jujgt")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_xvass")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_nemqh")
max_value = 1.0
step = 0.05
value = 1.0
ticks_on_borders = true
script = ExtResource("2_jujgt")

[node name="TextureRect" type="TextureRect" parent="VolumeMaster"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.5
offset_top = -20.0
offset_right = -86.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_uk1om")

[node name="VolumeMusic" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = 8.0
offset_right = -76.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
text = "Música:"
label_settings = SubResource("LabelSettings_abnwp")

[node name="Slider" type="HSlider" parent="VolumeMusic"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 167.5
offset_top = -5.0
offset_right = 377.5
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_jujgt")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_xvass")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_nemqh")
max_value = 1.0
step = 0.05
value = 1.0
ticks_on_borders = true
script = ExtResource("2_jujgt")
audio_bus_name = "Music"

[node name="TextureRect" type="TextureRect" parent="VolumeMusic"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = -20.0
offset_right = -81.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_4r2l2")

[node name="VolumeSoundFX" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = 56.0
offset_right = -16.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
text = "Efeitos Sonoros:"
label_settings = SubResource("LabelSettings_abnwp")

[node name="Slider" type="HSlider" parent="VolumeSoundFX"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 137.5
offset_top = -7.0
offset_right = 347.5
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_jujgt")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_xvass")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_nemqh")
max_value = 1.0
step = 0.05
value = 1.0
ticks_on_borders = true
script = ExtResource("2_jujgt")
audio_bus_name = "SoundFX"

[node name="TextureRect" type="TextureRect" parent="VolumeSoundFX"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.5
offset_top = -20.0
offset_right = -114.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_ls0ev")

[node name="ButtonBack" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -38.5
offset_top = -145.0
offset_right = 38.5
offset_bottom = -105.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("2_abnwp")
texture_pressed = ExtResource("3_jujgt")
texture_hover = ExtResource("4_xvass")

[node name="Label" type="Label" parent="ButtonBack"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -9.5
offset_right = 29.0
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
text = "Voltar"
label_settings = SubResource("LabelSettings_vqdip")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_wbxsw")
volume_db = -10.0
autoplay = true
bus = &"Music"

[connection signal="toggled" from="FullScreen/FullscreenToggle" to="FullScreen/FullscreenToggle" method="_on_toggled"]
[connection signal="drag_ended" from="VolumeMaster/Slider" to="VolumeMaster/Slider" method="_on_drag_ended"]
[connection signal="mouse_exited" from="VolumeMaster/Slider" to="VolumeMaster/Slider" method="release_focus"]
[connection signal="value_changed" from="VolumeMaster/Slider" to="VolumeMaster/Slider" method="_on_value_changed"]
[connection signal="drag_ended" from="VolumeMusic/Slider" to="VolumeMusic/Slider" method="_on_drag_ended"]
[connection signal="mouse_exited" from="VolumeMusic/Slider" to="VolumeMusic/Slider" method="release_focus"]
[connection signal="value_changed" from="VolumeMusic/Slider" to="VolumeMusic/Slider" method="_on_value_changed"]
[connection signal="drag_ended" from="VolumeSoundFX/Slider" to="VolumeSoundFX/Slider" method="_on_drag_ended"]
[connection signal="mouse_exited" from="VolumeSoundFX/Slider" to="VolumeSoundFX/Slider" method="release_focus"]
[connection signal="value_changed" from="VolumeSoundFX/Slider" to="VolumeSoundFX/Slider" method="_on_value_changed"]
[connection signal="pressed" from="ButtonBack" to="." method="_on_button_back_pressed"]
